Updated Recipes And Added Images

--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
     <ul> 
         <li><a href="./recipes/thymetea.html">Tranquil Thyme Tea</a></li> 
         <li><a href="./recipes/italianseasoning.html">Impressive Italian Seasoning</a></li> 
-        <li><a href="./recipes/pastawithgoatcheese.html">Perfect Pasta With Mushrooms And Goat Cheese</a></li> 
-        <li><a href="./recipes/roastedpotatoes.html">Random Roasted Potatoes</a></li> 
-        <li><a href="./recipes/salmonwithcapers.html">Simple Salmon With Capers</a></li>
         <li><a href="./recipes/sauteedcarrots.html">Sanguine Sauteed Carrots</a></li> 
-        <li><a href="./recipes/sauteedmushrooms.html">Superb Sauteed Mushrooms</a></li> 
-        <li><a href="./recipes/scallops.html">Sensational Scallops</a></li> 
+        <li><a href="./recipes/scallops.html">Sensational Scallop Sauce</a></li> 
         <li><a href="./recipes/simplebakedeggs.html">Brillaint Baked Eggs</a></li>
     </ul>
 </body>
