--- a/recipes/italianseasoning.html
+++ b/recipes/italianseasoning.html
@@ -6,22 +6,26 @@
 </head>
 <body> 
     <h1>Impressive Italian Seasoning</h1> 
-    <img src="../images/seasoning.jpg" alt="Picture Of Italian Seasoning" width="250" height="300"> 
+    <img src="../images/seasoning.jpg" alt="Picture Of Italian Seasoning" width="250" height="300" style="border:2px;margin:2px"><img src="../images/seasoning2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px"> 
     <h2>Description</h2>  
-    <p>There are dozens of foods which are made better by Italian seasoning, so if you love to cook, you’ve probably often used this blend of Mediterranean herbs. It’s a mix of 5 herbs and comes together in minutes. It’s a great way to use up odds and ends from your spice collection, and it makes lovely DIY gifts too. Use it to season fish and veggies, or simply sprinkle on olive oil and use as a dip for bread. You can store your homemade Italian seasoning mix in an airtight container for 6 months to 1 year. Of course, it’s best when it’s the freshest! Suprisingly, Italian seasoning isn’t used in Italian cuisine! There’s no official “definition” of it, either. It’s a spice blend that was created as a convenience for cooks to quickly add Mediterranean flair to dishes. Most mixes you’ll find at the store contain similar herbs: oregano, basil, and thyme being the heavy hitters.</p>
+    <p>Did you know that you can make seasoning in just a matter of minutes? There are dozens of foods which are made better by Italian seasoning, so if you love to cook, you’re probably already familiar with this blend of Mediterranean herbs. It’s a great way to use up spare hebrs in your spice collection, and it can even make lovely gifts! Some recommended uses are to season fish and veggies, or to simply sprinkle onto olive oil and use it as a simple dip. In order to store your homemade Italian seasoning mix, store it in an airtight container for 6 months to 1 year. Though of course, it's best when it's freshest! Did you know it's not actually used in Italian cuisine, but rather is a convenienct way for cooks to quickly add Mediterranean flair to their dishes? Here's how to make it!</p>
     <h2>How Much Thyme Will It Take?</h2>  
     <p>3 Minutes</p>
     <h2>Ingredients</h2> 
     <ul>  
-        <li>Dried Thyme</li> 
-        <li>Dried Oregano</li> 
-        <li>Dried Basil</li> 
-        <li>Dried Sage</li> 
-        <li>Dried Rosemary</li> 
+        <li>2 Tablespoons Dried Thyme</li>  
+        <li>2 Tablespoons Dried Basil</li> 
+        <li>2 Tablespoons Dried Oregano</li> 
+        <li>1 Tablespoon Dried Sage</li> 
+        <li>1 Tablespoon Dried Rosemary</li> 
     </ul>
     <h2>Steps</h2> 
-    <ol> 
-        <li>Whisk the ingredients together in a small bowl. Transfer to an airtight container or jar. Store for 6 months to 1 year in a cool, dry place.</li>
+    <ol>
+        <li><strong>Whisk: </strong>Add all the ingredients into a small bowl, then mix and whisk them together.</li> 
+        <li><strong>Storage:</strong>Transfer your spice mix to an airtight container or jar, then enjoy!</li>
     </ol>
 </body>
+<footer> 
+
+</footer>
 </html>
