--- a/recipes/sauteedcarrots.html
+++ b/recipes/sauteedcarrots.html
@@ -6,23 +6,23 @@
 </head>
 <body> 
     <h1>Sanguine Sauteed Carrots</h1>
-    <img src="../images/sauteedcarrots.jpg" alt="Picture Of Sauteed Carrots" width="250" height="300"> 
+    <img src="../images/sauteedcarrots.jpg" alt="Picture Of Sauteed Carrots" width="250" height="300" style="border:2px;margin:2px"><img src="../images/sauteedcarrots2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
     <h2>Description</h2>  
-    <p>Sauteed carrots are the perfect side dish, providing veggies when you might not have them prepared. They're very simple. and are the most tender, buttery, savory, coins, with a hint of herbaceous fresh thyme and chives. They taste like the best carrots you’ve ever had: but they only have 4 ingredients!</p>
+    <p>Have you ever wondered how to have more vegetables on a day-to-day basis? Sauteed carrots are the perfect side dish, providing veggies when you might not have them prepared. They're very simple, and have a very unique taste: they are tender, buttery, and savory, with a hint of herbaceous fresh thyme. They're probably going to taste like the best carrots you’ve ever had: but they only have 4 ingredients! Here's how to make them!</p>
     <h2>How Much Thyme Will It Take?</h2>  
     <p>10 Minutes</p>
     <h2>Ingredients</h2>  
     <ul> 
-        <li>Carrots</li> 
-        <li>Olive Oil</li> 
-        <li>Fresh Thyme</li> 
-        <li>Kosher Salt</li>
+        <li>8 Medium-Sized Carrots</li> 
+        <li>2 Tablespoons Olive Oil</li> 
+        <li>1 Tablespoon Chopped Fresh Thyme</li> 
+        <li>1/2 Teaspoon Kosher Salt</li>
     </ul>
     <h2>Steps</h2> 
     <ol> 
-        <li>Peel the carrots and slice them diagonally into nice rounds</li> 
-        <li>Heat the olive oil in a large skillet over medium high heat. Add the carrots and cover. Cook for 4 minutes without stirring.</li> 
-        <li>Remove the lid, stir, and add kosher salt. Continue to saute uncovered 3 to 4 minutes until browned, stirring occasionally. Remove from the heat and stir in the fresh herbs and a few more pinches kosher salt to taste. Serve immediately.</li>
+        <li><strong>Peel And Cut: </strong>Peel the carrots and slice them diagonally into nice rounds, so that they look natural but are also of a good shape.</li> 
+        <li><strong>Cover And Cook: </strong>Heat the olive oil in a large skillet over medium high heat, then add your carrots and cover them. Then comees the part that's different from most sauteed vegetables: you won't be stirring for 3-4 minutes! This helps to keep moisture inside the pan, making your carrots taste better.</li> 
+        <li><strong>Stir: </strong>Now comees the actuall saute: remove the lid, add your kosher salt, and start stirring the carrots. Continue to saute for 3 to 4 minutes until browned, then remove the pan from the heat and stir in your fresh thyme. Add in a few more pinches of kosher salt, then enjoy!</li>
     </ol>
 </body>
 </html>
