--- a/recipes/simplebakedeggs.html
+++ b/recipes/simplebakedeggs.html
@@ -6,10 +6,31 @@
 </head>
 <body> 
     <h1>Brilliant Baked Eggs</h1>
-    <img src="../images/eggs.jpg" alt="Picture Of Eggs" width="250" height="300"> 
-    <h2>Description</h2> 
-    <h2>How Much Thyme Will It Take?</h2> 
-    <h2>Ingredients</h2> 
+    <img src="../images/eggs.jpg" alt="Picture Of Eggs" width="250" height="300" style="border:2px;margin:2px"><img src="../images/eggs2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
+    <h2>Description</h2>  
+    <p>Who doesn't love eggs? Baked eggs are so incredibly simple, you barely even need a recipe to prepare them. These are oven baked, and make the perfect brunch out of everyday ingredients. What's more is that you can reuse this recipe with different toppings, meaning you can have a different experience every single time! Apart from parmesan and thyme, you could try sauteed spinach and mushrooms, or cheddar cheese and salsa! If you're feeling extremely adventurous, you could try making other breakfast calssics to go with your eggs, such as hash browns. Here's how to make them!</p>
+    <h2>How Much Thyme Will It Take?</h2>  
+    <p>20 Minutes</p>
+    <h2>Ingredients</h2>   
+    <ul> 
+        <li>2 Eggs</li> 
+        <li>1/2 Tablespoon Butter Or Substitute Neutral Oil For Dairy Free</li> 
+        <li>1/8 Teaspoon Kosher Salt</li> 
+        <li>Fresh Ground Pepper</li> 
+        <li>Shreddded Parmesan Cheese</li>
+        <li>2 Fresh Thyme Sprigs</li>
+    </ul>
     <h2>Steps</h2>
-</body>
+    <ol> 
+        <li><strong>Preheat: </strong>Preheat your oven to 190 degrees Celcius, or if you're American, 375 degrees Farenheit. This is usually the perfect temperature for baking eggs.</li> 
+        <li><strong>Melt: </strong> While the oven preheats, melt 1/2 a tablespoon of butter for  each small baking dish. Add it to the oven until it melts, which should take around a minute, then brush it around the inside of the dish</li>  
+        <li><strong>Crack The Eggs: </strong>Crack the eggs into a small bowl to avoid shells, then slide them into the tray. But of course, if you want, you can crack them straight into the dish.</li>  
+        <li><strong>Salt And Pepper: </strong>Don't forget to add your salt and freshly ground pepper to add extra flavour!</li>
+        <li><strong>Bake: </strong>Place the baking dishes on baking sheets, and then bake for 12 to 15 minutes. The usual amount of time is 13 minutes, and you'll know the time is right if the whites are set and the yol has reached your desired level of firmness. The exact timing also depends on the thickness of your dish. </li>
+        <li><strong>Toppings: </strong>Sprinkle on your toppings including your thyme, but keep in mind, the dishes are hot so place them on a seperate plate for serving. Enjoy your eggs!</li>        
+    </ol>
+</body> 
+<footer> 
+
+</footer>
 </html>
