--- a/recipes/thymetea.html
+++ b/recipes/thymetea.html
@@ -6,21 +6,25 @@
 </head>
 <body>
     <h1>Tranquil Thyme Tea</h1> 
-    <img src="../images/thymetea.jpg" alt="Picture Of Thyme Tea" width="250" height="300">
+    <img src="../images/thymetea.jpg" alt="Picture Of Thyme Tea" width="250" height="300" style="border:2px;margin:2px"><img src="../images/thymetea2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
     <h2>Description</h2>
-    <p>Did you know you can make tea using fresh herbs? Thyme tea is a delicious way to use your extra thyme to make tea. Thyme tea tastes herby, fragrant and satisfying. This recipe is best to make in the summer when you’ve got lots of herbs in your garden or in pots. Though, of course, you can still make it in the winter using fresh thyme from the grocery store. It’s a fun way to make DIY tea, and makes drinking water much more exciting. Here’s what to do!</p>
+    <p>Did you know you can make tea using fresh herbs? Thyme tea is a great way to use your extra thyme to make tea, therefore it is recommended that you make this recipe in the summer when your garden is overflowing with extra herbs. However, you can still make it during winter, just make sure to stock up on some fresh thyme from your local store or market! Thyme tea is very nice, and tastes both fragrant and satisfying. It’s a fun way to make your own tea, and can make drinking eater a more exciting experience. Here’s how to make it!</p>
     <h2>How Much Thyme Will It Take?</h2> 
     <p>5 Minutes</p> 
     <h2>Ingredients</h2> 
-    <ul>  
-        <li>Water</li>
-        <li>Fresh Thyme</li> 
+    <ul>   
+        <li>Boiling Water</li> 
+        <li>8 To 10 Fresh Thyme Sprigs: Either Standard Or Lemon Thyme</li>
     </ul> 
     <h2>Steps</h2> 
     <ol>
-        <li><strong>Boil: </strong>Boil a pot of water, preferrably using an electric kettle.</li> 
-        <li><strong>Harvest Herbs:</strong>Wash the thyme thoroughly, then add 8 to 10 fresh thyme sprigs to a mug.</li> 
-        <li><strong>Steep: </strong>Pour on the water. The exact quantity doesn’t matter, as long as it fills up the mug! Allow it to stand for 5 minutes, then enjoy!</li>
+        <li><strong>Boil: </strong>Bring a pot of water to a boil. It is recommended to use an electric tea kettle, that can also be used for morning coffee.</li> 
+        <li><strong>Wash: </strong>Wash the thyme thoroughly.</li>  
+        <li><strong>Harvest Herbs: </strong>Place the thyme sprigs into a mug; 8 to 10 fresh sprigs are recommended for the best taste.</li>
+        <li><strong>Steep: </strong>Pour on the water. The exact quantity doesn’t really matter: just make sure to fill up the mug! Allow it to stand for 5 minutes, then enjoy!</li> 
     </ol>
-</body>
+</body> 
+<footer> 
+
+</footer>
 </html>
