--- a/recipes/scallops.html
+++ b/recipes/scallops.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sensational Scallops</title>
+    <title>Sensational Scallop Sauce</title>
 </head>
 <body> 
-    <h1>Sensational Scallops</h1>
-    <img src="../images/scallops.jpg" alt="Picture Of Scallops" width="250" height="300"> 
-    <h2>Description</h2> 
+    <h1>Sensational Scallop Sauce</h1>
+    <img src="../images/scallops.jpg" alt="Picture Of Scallops" width="250" height="300" style="border:2px;margin:2px"><img src="../images/scallops2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
+    <h2>Description</h2>  
+    <p>Are you looking for a delicious sauce to serve with your scallops or other seafood? This sauce carries a tangy and garlicky flavour, and will make your recipes infinitely better. Here's how to make it!</p>
     <h2>How Much Thyme Will It Take?</h2> 
     <h2>Ingredients</h2> 
     <h2>Steps</h2>
