Updated Scallop Recipe

--- a/recipes/scallops.html
+++ b/recipes/scallops.html
@@ -9,8 +9,22 @@
     <img src="../images/scallops.jpg" alt="Picture Of Scallops" width="250" height="300" style="border:2px;margin:2px"><img src="../images/scallops2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
     <h2>Description</h2>  
     <p>Are you looking for a delicious sauce to serve with your scallops or other seafood? This sauce carries a tangy and garlicky flavour, and will make your recipes infinitely better. Here's how to make it!</p>
-    <h2>How Much Thyme Will It Take?</h2> 
+    <h2>How Much Thyme Will It Take?</h2>  
+    <p>5 Minutes</p>
     <h2>Ingredients</h2> 
-    <h2>Steps</h2>
+    <ul> 
+        <li>2 Tablespoons Salted Butter</li> 
+        <li>2 Tablespoons Lemon Juice</li> 
+        <li>1 Garlic Glove (Minced)</li> 
+        <li>2 Tablespoons Fresh Chopped Thyme</li> 
+        <li>Optional: Lemon Wedges</li>
+    </ul>
+    <h2>Steps</h2> 
+    <ol> 
+        <li><strong>Prepare: </strong>Sear your scallops, or just prepare your other seafood which will benefit from this sauce, such as mussels or salmon.</li> 
+        <li><strong>Melt: </strong>Remove your scallops or other seafood from the skillet to a plate, and reduce the heat. Add your butter, lemon juice, minced garlic and chopped thyme, then leave it for 1 to 2 minutes to cook. This will simply melt the butter and let the thyme infuse, adding flavour to your dish.</li>  
+        <li><strong>Scrape: </strong>Scrape the bottom of the pan with a spatula in order to release and browned bits that are stuck to the pan. These are just browned bits of scallop, and are incorporated right into the sauce! Let it cook for 1 minute, until it's fragrant.</li> 
+        <li><strong>Serve: </strong>Add in your scallops, and lemeon wedges if you have them, then serve immediatly. Enjoy!</li>
+    </ol>
 </body>
 </html>
