--- a/index.html
+++ b/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Thyme Is Money</title>
+    <title>Thyme Is Money</title> 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Thyme Is Money</h1> 
-    <!-- Source: https://www.acouplecooks.com/thyme-recipes/ -->
-    <img src="images/herbs.gif" alt="Picture Of Herbs"> 
-    <p>Here are some of the best recipes featuring thyme:</p> 
-    <ul> 
-        <li><a href="./recipes/thymetea.html">Tranquil Thyme Tea</a></li> 
-        <li><a href="./recipes/italianseasoning.html">Impressive Italian Seasoning</a></li> 
-        <li><a href="./recipes/sauteedcarrots.html">Sanguine Sauteed Carrots</a></li> 
-        <li><a href="./recipes/scallops.html">Sensational Scallop Sauce</a></li> 
-        <li><a href="./recipes/simplebakedeggs.html">Brillaint Baked Eggs</a></li>
-    </ul>
-</body>
+    <div class="wrapper"> 
+    <div>
+    <h1>Thyme Is Money</h1>   
+    </div>
+    <img src="images/matrix.gif" alt="Matrix Gif" class="border">  
+    <blockquote>
+        "Remember That Thyme Is Money"
+        <span>Benjamin Franklin</span>
+    </blockquote>
+    <p>Here are some of the best recipes featuring thyme:</p>  
+        <div>
+        <ul> 
+            <a href="./recipes/thymetea.html"><button class="button">Tranquil Thyme Tea</button></a>
+            <a href="./recipes/italianseasoning.html"><button class="button">Impressive Italian Seasoning</button></a>
+            <a href="./recipes/sauteedcarrots.html"><button class="button">Sanguine Sauteed Carrots</button></a>
+            <a href="./recipes/scallops.html"><button class="buton">Sensational Scallop Sauce</button></a>
+            <a href="./recipes/simplebakedeggs.html"><button class="button">Brillaint Baked Eggs</button></a>
+        </ul> 
+        </div> 
+    </div>
+</body> 
 </html>
