--- a/recipes/sauteedcarrots.html
+++ b/recipes/sauteedcarrots.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sanguine Sauteed Carrots</title>
+    <title>Sanguine Sauteed Carrots</title> 
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body> 
+    <div class="wrapper"> 
     <h1>Sanguine Sauteed Carrots</h1>
     <img src="../images/sauteedcarrots.jpg" alt="Picture Of Sauteed Carrots" width="250" height="300" style="border:2px;margin:2px"><img src="../images/sauteedcarrots2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
     <h2>Description</h2>  
@@ -23,6 +25,11 @@
         <li><strong>Peel And Cut: </strong>Peel the carrots and slice them diagonally into nice rounds, so that they look natural but are also of a good shape.</li> 
         <li><strong>Cover And Cook: </strong>Heat the olive oil in a large skillet over medium high heat, then add your carrots and cover them. Then comees the part that's different from most sauteed vegetables: you won't be stirring for 3-4 minutes! This helps to keep moisture inside the pan, making your carrots taste better.</li> 
         <li><strong>Stir: </strong>Now comees the actuall saute: remove the lid, add your kosher salt, and start stirring the carrots. Continue to saute for 3 to 4 minutes until browned, then remove the pan from the heat and stir in your fresh thyme. Add in a few more pinches of kosher salt, then enjoy!</li>
-    </ol>
-</body>
+    </ol> 
+    </div>
+</body> 
+<br>
+<footer>
+    Return to <a href=../index.html>Home Page</a>
+</footer>
 </html>
