--- a/recipes/scallops.html
+++ b/recipes/scallops.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sensational Scallop Sauce</title>
+    <title>Sensational Scallop Sauce</title> 
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body> 
+<body>  
+    <div class="wrapper">
     <h1>Sensational Scallop Sauce</h1>
     <img src="../images/scallops.jpg" alt="Picture Of Scallops" width="250" height="300" style="border:2px;margin:2px"><img src="../images/scallops2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
     <h2>Description</h2>  
@@ -25,6 +27,11 @@
         <li><strong>Melt: </strong>Remove your scallops or other seafood from the skillet to a plate, and reduce the heat. Add your butter, lemon juice, minced garlic and chopped thyme, then leave it for 1 to 2 minutes to cook. This will simply melt the butter and let the thyme infuse, adding flavour to your dish.</li>  
         <li><strong>Scrape: </strong>Scrape the bottom of the pan with a spatula in order to release and browned bits that are stuck to the pan. These are just browned bits of scallop, and are incorporated right into the sauce! Let it cook for 1 minute, until it's fragrant.</li> 
         <li><strong>Serve: </strong>Add in your scallops, and lemeon wedges if you have them, then serve immediatly. Enjoy!</li>
-    </ol>
-</body>
+    </ol> 
+    </div>
+</body>  
+<br>
+<footer>
+    Return to <a href=../index.html>Home Page</a>
+</footer>
 </html>
