--- a/recipes/thymetea.html
+++ b/recipes/thymetea.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tranquil Thyme Tea</title>
+    <title>Tranquil Thyme Tea</title> 
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <div class="wrapper">
     <h1>Tranquil Thyme Tea</h1> 
     <img src="../images/thymetea.jpg" alt="Picture Of Thyme Tea" width="250" height="300" style="border:2px;margin:2px"><img src="../images/thymetea2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
     <h2>Description</h2>
@@ -22,9 +24,11 @@
         <li><strong>Wash: </strong>Wash the thyme thoroughly.</li>  
         <li><strong>Harvest Herbs: </strong>Place the thyme sprigs into a mug; 8 to 10 fresh sprigs are recommended for the best taste.</li>
         <li><strong>Steep: </strong>Pour on the water. The exact quantity doesn’t really matter: just make sure to fill up the mug! Allow it to stand for 5 minutes, then enjoy!</li> 
-    </ol>
-</body> 
-<footer> 
-
+    </ol> 
+    </div>
+</body>  
+<br> 
+<footer>
+    Return to <a href=../index.html>Home Page</a>
 </footer>
 </html>
