--- a/recipes/italianseasoning.html
+++ b/recipes/italianseasoning.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Impressive Italian Seasoning</title>
+    <title>Impressive Italian Seasoning</title> 
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body> 
+<body>  
+    <div class="wrapper"> 
     <h1>Impressive Italian Seasoning</h1> 
-    <img src="../images/seasoning.jpg" alt="Picture Of Italian Seasoning" width="250" height="300" style="border:2px;margin:2px"><img src="../images/seasoning2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px"> 
+    <img src="../images/seasoning.jpg" alt="Picture Of Italian Seasoning" width="250" height="300" style="border:2px;margin:2px;"><img src="../images/seasoning2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px"> 
     <h2>Description</h2>  
-    <p>Did you know that you can make seasoning in just a matter of minutes? There are dozens of foods which are made better by Italian seasoning, so if you love to cook, you’re probably already familiar with this blend of Mediterranean herbs. It’s a great way to use up spare hebrs in your spice collection, and it can even make lovely gifts! Some recommended uses are to season fish and veggies, or to simply sprinkle onto olive oil and use it as a simple dip. In order to store your homemade Italian seasoning mix, store it in an airtight container for 6 months to 1 year. Though of course, it's best when it's freshest! Did you know it's not actually used in Italian cuisine, but rather is a convenienct way for cooks to quickly add Mediterranean flair to their dishes? Here's how to make it!</p>
+    <p>Did you know that you can make seasoning in just a matter of minutes? There are dozens of foods which are made better by Italian seasoning, so if you love to cook, you’re probably already familiar with this blend of Mediterranean herbs. It’s a great way to use up spare hebrs in your spice collection, and it can even make lovely gifts! Some recommended uses are to season fish and veggies, or to sprinkle it onto olive oil and use it as a simple dip. In order to store your homemade Italian seasoning mix, store it in an airtight container for 6 months to 1 year. Though of course, it's best when it's freshest! Did you know it's not actually used in Italian cuisine, but rather is a convenienct way for cooks to quickly add Mediterranean flair to their dishes? Here's how to make it!</p>
     <h2>How Much Thyme Will It Take?</h2>  
     <p>3 Minutes</p>
     <h2>Ingredients</h2> 
@@ -18,14 +20,16 @@
         <li>2 Tablespoons Dried Oregano</li> 
         <li>1 Tablespoon Dried Sage</li> 
         <li>1 Tablespoon Dried Rosemary</li> 
-    </ul>
+    </ul> 
     <h2>Steps</h2> 
     <ol>
         <li><strong>Whisk: </strong>Add all the ingredients into a small bowl, then mix and whisk them together.</li> 
         <li><strong>Storage:</strong>Transfer your spice mix to an airtight container or jar, then enjoy!</li>
-    </ol>
-</body>
-<footer> 
-
+    </ol> 
+    </div>
+</body> 
+<br>
+<footer>
+    Return to <a href=../index.html>Home Page</a>
 </footer>
 </html>
