--- a/recipes/simplebakedeggs.html
+++ b/recipes/simplebakedeggs.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Brilliant Baked Eggs</title>
+    <title>Brilliant Baked Eggs</title> 
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body> 
+<body>  
+    <div class=wrapper>
     <h1>Brilliant Baked Eggs</h1>
     <img src="../images/eggs.jpg" alt="Picture Of Eggs" width="250" height="300" style="border:2px;margin:2px"><img src="../images/eggs2.jpg" alt="" width="250" height="300" style="border:2px;margin:2px">
     <h2>Description</h2>  
@@ -28,9 +30,11 @@
         <li><strong>Salt And Pepper: </strong>Don't forget to add your salt and freshly ground pepper to add extra flavour!</li>
         <li><strong>Bake: </strong>Place the baking dishes on baking sheets, and then bake for 12 to 15 minutes. The usual amount of time is 13 minutes, and you'll know the time is right if the whites are set and the yol has reached your desired level of firmness. The exact timing also depends on the thickness of your dish. </li>
         <li><strong>Toppings: </strong>Sprinkle on your toppings including your thyme, but keep in mind, the dishes are hot so place them on a seperate plate for serving. Enjoy your eggs!</li>        
-    </ol>
-</body> 
-<footer> 
-
+    </ol> 
+    </div>
+</body>  
+<br>
+<footer>
+    Return to <a href=../index.html>Home Page</a>
 </footer>
 </html>
